[gd_scene load_steps=4 format=3 uid="uid://b7134j8afntpo"]

[ext_resource type="Theme" uid="uid://bg45fa5ynd7fs" path="res://assets/themes/theme_mail.tres" id="1_oeo4h"]
[ext_resource type="Script" path="res://scripts/verify_user.gd" id="1_wpyrc"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3pf87"]
bg_color = Color(1, 1, 1, 1)

[node name="VerifyUser" type="MarginContainer"]
offset_right = 779.0
offset_bottom = 428.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("1_oeo4h")
theme_override_constants/margin_left = 14
theme_override_constants/margin_top = 14
theme_override_constants/margin_right = 14
theme_override_constants/margin_bottom = 14
script = ExtResource("1_wpyrc")
metadata/_tab_index = 3

[node name="Panel" type="Panel" parent="."]
visible = false
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_3pf87")

[node name="HBC1" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Instructions" type="RichTextLabel" parent="HBC1"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.66
text = "Do Step 1,2, & 3 if:

First-time setup 
--or--
Refresh [NOT USER] Token expired

Expires in 15 minutes.

Do Step 4 if verified user code. Repeat Step 4 when necessary.


No link? Use: https://github.com/login/device."
fit_content = true

[node name="S1" type="MarginContainer" parent="HBC1"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.1

[node name="VBC1" type="VBoxContainer" parent="HBC1"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.66

[node name="S2" type="MarginContainer" parent="HBC1/VBC1"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.15

[node name="ReqCode" type="Button" parent="HBC1/VBC1"]
layout_mode = 2
text = "1. Request Verify Code"

[node name="SendToVerify" type="LinkButton" parent="HBC1/VBC1"]
layout_mode = 2
size_flags_horizontal = 4
text = "2. Verify Code"
uri = "https://www.github.com"

[node name="RefreshApp" type="Button" parent="HBC1/VBC1"]
layout_mode = 2
disabled = true
text = "3. Tell App to Confirm"

[node name="RefreshToken" type="Button" parent="HBC1/VBC1"]
layout_mode = 2
disabled = true
text = "4. Refresh User Token"

[node name="S3" type="MarginContainer" parent="HBC1/VBC1"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.15

[node name="VerifyLabel" type="Label" parent="HBC1/VBC1"]
layout_mode = 2
text = "Verification Code:"
horizontal_alignment = 1

[node name="Code" type="Label" parent="HBC1/VBC1"]
layout_mode = 2
horizontal_alignment = 1

[node name="CheckAccess" type="LinkButton" parent="HBC1/VBC1"]
layout_mode = 2
size_flags_horizontal = 4
text = "Check Access"
uri = "https://github.com/settings/connections/applications/:client_id"

[node name="S4" type="MarginContainer" parent="HBC1/VBC1"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.1

[node name="Expiration" type="Label" parent="HBC1/VBC1"]
layout_mode = 2
horizontal_alignment = 1

[node name="S5" type="MarginContainer" parent="HBC1/VBC1"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.15

[node name="S6" type="MarginContainer" parent="HBC1"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.1

[node name="ExpireTimer" type="Timer" parent="."]

[node name="ErrorPopup" type="MarginContainer" parent="."]
visible = false
layout_mode = 2

[node name="Panel" type="Panel" parent="ErrorPopup"]
layout_mode = 2

[node name="S7" type="MarginContainer" parent="ErrorPopup"]
layout_mode = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 20

[node name="VBC2" type="VBoxContainer" parent="ErrorPopup/S7"]
layout_mode = 2
alignment = 1

[node name="Message" type="Label" parent="ErrorPopup/S7/VBC2"]
layout_mode = 2
theme_override_font_sizes/font_size = 15
text = "404 Error
There has been an error."
horizontal_alignment = 1

[node name="Ok" type="Button" parent="ErrorPopup/S7/VBC2"]
layout_mode = 2
text = "Ok"
